--- a/zeppelin-web/pom.xml
+++ b/zeppelin-web/pom.xml
@@ -124,7 +124,7 @@
             </goals>
 
             <configuration>
-              <arguments>--no-color</arguments>
+              <arguments>--no-color --force</arguments>
             </configuration>
           </execution>
         </executions>
