--- a/hbase/pom.xml
+++ b/hbase/pom.xml
@@ -22,13 +22,13 @@
   <parent>
     <artifactId>zeppelin</artifactId>
     <groupId>org.apache.zeppelin</groupId>
-    <version>0.6.0</version>
+    <version>GIO-0.6.0</version>
   </parent>
 
   <groupId>org.apache.zeppelin</groupId>
   <artifactId>zeppelin-hbase</artifactId>
   <packaging>jar</packaging>
-  <version>0.6.0</version>
+  <version>GIO-0.6.0</version>
   <name>Zeppelin: HBase interpreter</name>
   <url>http://www.apache.org</url>
 
