--- a/pom.xml
+++ b/pom.xml
@@ -599,26 +599,26 @@
                     <ignore/>
                   </action>
                 </pluginExecution>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>
-                      org.apache.maven.plugins
-                    </groupId>
-                    <artifactId>
-                      maven-checkstyle-plugin
-                    </artifactId>
-                    <versionRange>
-                      [2.13,)
-                    </versionRange>
-                    <goals>
-                      <goal>checkstyle</goal>
-                      <goal>check</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore></ignore>
-                  </action>
-                </pluginExecution>
+                <!--<pluginExecution>-->
+                  <!--<pluginExecutionFilter>-->
+                    <!--<groupId>-->
+                      <!--org.apache.maven.plugins-->
+                    <!--</groupId>-->
+                    <!--<artifactId>-->
+                      <!--maven-checkstyle-plugin-->
+                    <!--</artifactId>-->
+                    <!--<versionRange>-->
+                      <!--[2.13,)-->
+                    <!--</versionRange>-->
+                    <!--<goals>-->
+                      <!--<goal>checkstyle</goal>-->
+                      <!--<goal>check</goal>-->
+                    <!--</goals>-->
+                  <!--</pluginExecutionFilter>-->
+                  <!--<action>-->
+                    <!--<ignore></ignore>-->
+                  <!--</action>-->
+                <!--</pluginExecution>-->
               </pluginExecutions>
             </lifecycleMappingMetadata>
           </configuration>
