--- a/markdown/pom.xml
+++ b/markdown/pom.xml
@@ -41,10 +41,16 @@
       <scope>provided</scope>
     </dependency> 
 
+    <!--<dependency>-->
+      <!--<groupId>org.commonjava.googlecode.markdown4j</groupId>-->
+      <!--<artifactId>markdown4j</artifactId>-->
+      <!--<version>2.2-cj-1.0</version>-->
+    <!--</dependency>-->
+
     <dependency>
-      <groupId>org.commonjava.googlecode.markdown4j</groupId>
-      <artifactId>markdown4j</artifactId>
-      <version>2.2-cj-1.0</version>
+      <groupId>org.pegdown</groupId>
+      <artifactId>pegdown</artifactId>
+      <version>1.1.0</version>
     </dependency>
 
     <dependency>
