update GIO-Zeppelin to 0.8

--- a/.gitignore
+++ b/.gitignore
@@ -23,17 +23,17 @@ zeppelin-server/local-repo
 zeppelin-server/src/main/resources/zeppelin-site.xml
 
 # conf file
-conf/zeppelin-env.sh
-conf/zeppelin-env.cmd
-conf/zeppelin-site.xml
-conf/shiro.ini
-conf/keystore
-conf/truststore
-conf/interpreter.json
-conf/notebook-authorization.json
-conf/shiro.ini
-conf/credentials.json
-conf/helium.json
+# conf/zeppelin-env.sh
+# conf/zeppelin-env.cmd
+# conf/zeppelin-site.xml
+# conf/shiro.ini
+# conf/keystore
+# conf/truststore
+# conf/interpreter.json
+# conf/notebook-authorization.json
+# conf/shiro.ini
+# conf/credentials.json
+# conf/helium.json
 
 # other generated files
 spark/dependency-reduced-pom.xml
@@ -68,7 +68,7 @@ zeppelin-web/yarn.lock
 /zan-repo/
 /drivers/
 /warehouse/
-/notebook/
+# /notebook/
 /local-repo/
 
 **/sessions/
@@ -128,3 +128,5 @@ tramp
 
 # Git properties
 **/git.properties
+
+gio-logs/
