--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -27,3 +27,16 @@ log4j.appender.dailyfile = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dailyfile.File = ${zeppelin.log.file}
 log4j.appender.dailyfile.layout = org.apache.log4j.PatternLayout
 log4j.appender.dailyfile.layout.ConversionPattern=%5p [%d] ({%t} %F[%M]:%L) - %m%n
+
+log4j.logger.gioparagraph=INFO,gioparagraph,dailyfile
+log4j.additivity.gioparagraph=false
+log4j.appender.gioparagraph=org.apache.zeppelin.utils.GIOLogAppender
+log4j.appender.gioparagraph.File= ${zeppelin.gio-log.file}
+log4j.appender.gioparagraph.Threshold=INFO
+log4j.appender.gioparagraph.layout=org.apache.log4j.PatternLayout
+log4j.appender.gioparagraph.DatePattern=.yyyy-MM-dd
+log4j.appender.gioparagraph.layout.ConversionPattern=%5p [%d]:  %m%n
+
+
+
+
