--- a/conf/zeppelin-env.cmd.template
+++ b/conf/zeppelin-env.cmd.template
@@ -26,6 +26,8 @@ REM set ZEPPELIN_JMX_ENABLE     		REM Enable JMX feature by defining it like "tr
 REM set ZEPPELIN_JMX_PORT       		REM Port number which JMX uses. Default: "9996"
 
 REM set ZEPPELIN_LOG_DIR        		REM Where log files are stored.  PWD by default.
+REM set ZEPPELIN_GIO_LOG_DIR        	REM Where gio-log files are stored.  PWD by default.
+
 REM set ZEPPELIN_PID_DIR        		REM The pid files are stored. /tmp by default.
 REM set ZEPPELIN_WAR_TEMPDIR    		REM The location of jetty temporary directory.
 REM set ZEPPELIN_NOTEBOOK_DIR   		REM Where notebook saved
