change demo spark notebook from local to yarn

--- a/conf/shiro.ini
+++ b/conf/shiro.ini
@@ -26,6 +26,22 @@ user3 = password4, role2
 
 # Sample LDAP configuration, for user Authentication, currently tested for single Realm
 [main]
+
+#ldapRealm = org.apache.zeppelin.realm.LdapRealm
+#ldapRealm.contextFactory.systemUsername = cn=growingio,cn=Users,dc=growingio,dc=com
+#ldapRealm.contextFactory.systemPassword = qwer12#A
+#ldapRealm.authorizationEnabled = true
+#ldapRealm.userSearchBase = ou=growingio,dc=growingio,dc=com
+#ldapRealm.groupSearchBase = ou=growingio,dc=growingio,dc=com
+#ldapRealm.userSearchFilter= (&(sAMAccountName={0})(memberOf=CN=data-zeppelin,DC=growingio,DC=com))
+#ldapRealm.groupObjectClass = group
+#ldapRealm.userSearchAttributeName = sAMAccountName
+#ldapRealm.contextFactory.url = ldap://54.223.144.41:389
+#ldapRealm.contextFactory.authenticationMechanism = simple
+#ldapRealm.rolesByGroup = "EN": admin
+#securityManager.realms = $ldapRealm
+
+
 ### A sample for configuring Active Directory Realm
 #activeDirectoryRealm = org.apache.zeppelin.realm.ActiveDirectoryGroupRealm
 #activeDirectoryRealm.systemUsername = userNameA
